--- a/styles.css
+++ b/styles.css
@@ -1543,7 +1543,7 @@ body {
  * Callouts
  */
 
-.cm-embed-block:has(> div > .callout[data-callout="note-toolbar"]) {
+.cm-embed-block:has(> div > .callout[data-callout="note-toolbar"]:not(.note-toolbar-launchpad)) {
     &:hover {
         box-shadow: none !important; /* hide the border on hover of the toolbar callout */
         & .edit-block-button {
@@ -2551,8 +2551,10 @@ body.is-mobile button.cg-note-toolbar-fab[data-fab-metadata*="mgls"] {
         margin-inline-end: 0;
     }
     &:hover {
-        /* fix: (#14) flickering problem experienced with Banner plugin beta in use */
-        overflow: inherit !important;
+        &:not(:has(.note-toolbar-launchpad)) {
+            /* fix: (#14) flickering problem experienced with Banner plugin beta in use */
+            overflow: inherit !important;
+        }
     }
     /* width: var(--var-max-width);
     max-width: var(--var-max-width); */
